--- a/frontmatter/front.tex
+++ b/frontmatter/front.tex
@@ -9,7 +9,7 @@
 \end{center}
 \mbox{}\\[1pc]
 \begin{center}
-    \huge{ \bfseries Reliable Multipath Backhaul}\\[2pc]
+    \huge{ \bfseries Deterministic Multipath Backhaul}\\[2pc]
 
     \Large{Nicolas Zunker}\\
     \large{n.zunker@campus.tu-berlin.de}\\[1pc]
