--- a/refs.bib
+++ b/refs.bib
@@ -1,171 +1,194 @@
-
-@inproceedings{kundel_user_2022,
-	title = {User Plane Hardware Acceleration in Access Networks: Experiences in Offloading Network Functions in Real 5G Deployments},
-	url = {http://hdl.handle.net/10125/80236},
-	doi = {10.24251/HICSS.2022.894},
-	shorttitle = {User Plane Hardware Acceleration in Access Networks},
-	abstract = {Fulﬁlling the ambitious Quality of Service demands of today’s wireless networks, especially low latency, high bandwidths and availability, is a big challenge for researchers, network architects, and operators. Each networking component on the data path between the user equipment and the destination data network, e.g., the Internet, must provide the highest performance to meet these requirements. This work demonstrates how different network elements of the user plane, describing the whole path of user trafﬁc, can be sped up with different hardware acceleration technologies. For that, we demonstrate how to build up a 5G standalone campus network for evaluation, working end-to-end with real user equipment and open-source software components. Further, we analyze the user plane network functions of 5G networks from the radio access network to the core. Based on our real 5G setup, the practical evaluation of the analysis results shows up how the 5G user plane hardware can be accelerated best.},
-	eventtitle = {Hawaii International Conference on System Sciences},
-	author = {Kundel, Ralf and Meuser, Tobias and Koppe, Timo and Hark, Rhaban and Steinmetz, Ralf},
-	urldate = {2023-05-10},
-	date = {2022},
-	langid = {english},
-	file = {Kundel et al. - 2022 - User Plane Hardware Acceleration in Access Network.pdf:/home/nzu/Zotero/storage/RDTVSVJK/Kundel et al. - 2022 - User Plane Hardware Acceleration in Access Network.pdf:application/pdf},
+@inproceedings{tsai2006review,
+  title={A review of multipath routing protocols: From wireless ad hoc to mesh networks},
+  author={Tsai, Jack and Moors, Tim},
+  booktitle={ACoRN early career researcher workshop on wireless multihop networking},
+  volume={30},
+  year={2006},
+  organization={Citeseer}
 }
 
-@article{goldenberg_optimizing_nodate,
-	title = {Optimizing cost and performance for multihoming},
-	abstract = {Multihoming is often used by large enterprises and stub {ISPs} to connect to the Internet. In this paper, we design a series of novel smart routing algorithms to optimize cost and performance for multihomed users. We evaluate our algorithms through both analysis and extensive simulations based on realistic charging models, trafﬁc demands, performance data, and network topologies. Our results suggest that these algorithms are very effective in minimizing cost and at the same time improving performance. We further examine the equilibrium performance of smart routing in a global setting and show that a smart routing user can improve its performance without adversely affecting other users.},
-	author = {Goldenberg, David K and Qiu, Lili and Xie, Haiyong and Yang, Yang Richard and Zhang, Yin and Labs, T},
-	langid = {english},
-	file = {Goldenberg et al. - Optimizing cost and performance for multihoming.pdf:/home/nzu/Zotero/storage/JYGB4YVJ/Goldenberg et al. - Optimizing cost and performance for multihoming.pdf:application/pdf},
+@inproceedings{tao2005improving,
+  title={Improving VoIP quality through path switching},
+  author={Tao, Shu and Xu, Kuai and Estepa, Antonio and Gao, Teng Fei Lixin and Guerin, ROCH and Kurose, Jim and Towsley, Don and Zhang, Z-L},
+  booktitle={Proceedings IEEE 24th Annual Joint Conference of the IEEE Computer and Communications Societies.},
+  volume={4},
+  pages={2268--2278},
+  year={2005},
+  organization={IEEE}
 }
 
-@article{tsai,
-	title = {A Review of Multipath Routing Protocols: From Wireless Ad Hoc to Mesh Networks},
-	author = {Tsai, Jack and Moors, Tim},
-	langid = {english},
-	file = {Tsai and Moors - A Review of Multipath Routing Protocols From Wire.pdf:/home/nzu/Zotero/storage/E5ZFSPS8/Tsai and Moors - A Review of Multipath Routing Protocols From Wire.pdf:application/pdf},
+@inproceedings{kundel2022user,
+  title={User Plane Hardware Acceleration in Access Networks: Experiences in Offloading Network Functions in Real 5G Deployments.},
+  author={Kundel, Ralf and Meuser, Tobias and Koppe, Timo and Hark, Rhaban and Steinmetz, Ralf},
+  booktitle={HICSS},
+  pages={1--10},
+  year={2022}
 }
 
-@inproceedings{lange_performance_2015,
-	location = {Barcelona, Spain},
-	title = {Performance benchmarking of a software-based {LTE} {SGW}},
-	isbn = {978-3-901882-77-7},
-	url = {http://ieeexplore.ieee.org/document/7367386/},
-	doi = {10.1109/CNSM.2015.7367386},
-	abstract = {Network Functions Virtualization ({NFV}) is a concept that aims at providing network operators with beneﬁts in terms of cost, ﬂexibility, and vendor independence by utilizing virtualization techniques to run network functions as software on commercial off-the-shelf ({COTS}) hardware. In contrast, prior solutions rely on specialized hardware for each function. Performance evaluation of such systems usually requires a dedicated testbed for each individual component. Rather than analyzing these proprietary black-box components, Virtualized Network Functions ({VNFs}) are pieces of software that run on {COTS} hardware and whose properties can be investigated in a generic testbed. However, depending on the underlying hardware, operating system, and implementation, {VNFs} might behave differently. Therefore, mechanisms for the performance evaluation of {VNFs} should be similar to benchmarking of software, where different implementations are compared by applying them to predeﬁned test cases and scenarios. This work presents a ﬁrst step towards a benchmarking framework for {VNFs}. Given two different implementations of a {VNF} that acts as {LTE} Serving Gateway ({SGW}), inﬂuence factors and key performance indicators are identiﬁed and a comparison between the two mechanisms is drawn.},
-	eventtitle = {2015 11th International Conference on Network and Service Management ({CNSM})},
-	pages = {378--383},
-	booktitle = {2015 11th International Conference on Network and Service Management ({CNSM})},
-	publisher = {{IEEE}},
-	author = {Lange, Stanislav and Nguyen-Ngoc, Anh and Gebert, Steffen and Zinner, Thomas and Jarschel, Michael and Kopsel, Andreas and Sune, Marc and Raumer, Daniel and Gallenmuller, Sebastian and Carle, Georg and Tran-Gia, Phuoc},
-	urldate = {2023-05-10},
-	date = {2015-11},
-	langid = {english},
-	file = {Lange et al. - 2015 - Performance benchmarking of a software-based LTE S.pdf:/home/nzu/Zotero/storage/4PMTP2EI/Lange et al. - 2015 - Performance benchmarking of a software-based LTE S.pdf:application/pdf},
+@article{goldenberg2004optimizing,
+  title={Optimizing cost and performance for multihoming},
+  author={Goldenberg, David K and Qiuy, Lili and Xie, Haiyong and Yang, Yang Richard and Zhang, Yin},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={34},
+  number={4},
+  pages={79--92},
+  year={2004},
+  publisher={ACM New York, NY, USA}
 }
 
-@article{tarique_survey_2009,
-	title = {Survey of multipath routing protocols for mobile ad hoc networks},
-	volume = {32},
-	issn = {10848045},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S1084804509001027},
-	doi = {10.1016/j.jnca.2009.07.002},
-	abstract = {This survey investigates multipath routing protocols for mobile ad hoc networks ({MANETs}). The main objectives of multipath routing protocols are to provide reliable communication and to ensure load balancing as well as to improve quality of service ({QoS}) of {MANETs}. These multipath protocols are broadly classiﬁed into ﬁve categories based on their major goals. The goals are to improve delay, provide reliability, reduce overhead, maximize network life and support hybrid routing. Multipath routing protocols address issues such as multiple paths discovery and maintaining these paths. Issues, objectives, performances, advantages and disadvantages of these protocols are investigated and summarized. A checklist is provided as a guideline so that a network designer can choose an appropriate multipath routing protocol to meet the network’s application objectives.},
-	pages = {1125--1143},
-	number = {6},
-	journaltitle = {Journal of Network and Computer Applications},
-	shortjournal = {Journal of Network and Computer Applications},
-	author = {Tarique, Mohammed and Tepe, Kemal E. and Adibi, Sasan and Erfani, Shervin},
-	urldate = {2023-05-10},
-	date = {2009-11},
-	langid = {english},
-	file = {Tarique et al. - 2009 - Survey of multipath routing protocols for mobile a.pdf:/home/nzu/Zotero/storage/GVZVMVBA/Tarique et al. - 2009 - Survey of multipath routing protocols for mobile a.pdf:application/pdf},
+@inproceedings{lange2015performance,
+  title={Performance benchmarking of a software-based LTE SGW},
+  author={Lange, Stanislav and Nguyen-Ngoc, Anh and Gebert, Steffen and Zinner, Thomas and Jarschel, Michael and K{\"o}psel, Andreas and Sune, Marc and Raumer, Daniel and Gallenm{\"u}ller, Sebastian and Carle, Georg and others},
+  booktitle={2015 11th International Conference on Network and Service Management (CNSM)},
+  pages={378--383},
+  year={2015},
+  organization={IEEE}
 }
 
-@inproceedings{tschoke_time-sensitive_2021,
-	location = {Valencia, Spain},
-	title = {Time-Sensitive Networking over Metropolitan Area Networks for Remote Industrial Control},
-	isbn = {978-1-66543-326-6},
-	url = {https://ieeexplore.ieee.org/document/9576141/},
-	doi = {10.1109/DS-RT52167.2021.9576141},
-	eventtitle = {2021 {IEEE}/{ACM} 25th International Symposium on Distributed Simulation and Real Time Applications ({DS}-{RT})},
-	pages = {1--4},
-	booktitle = {2021 {IEEE}/{ACM} 25th International Symposium on Distributed Simulation and Real Time Applications ({DS}-{RT})},
-	publisher = {{IEEE}},
-	author = {Tschoke, Simon and Lynker, Frederic and Buhr, Hauke and Schreiner, Florian and Willner, Alexander and Vick, Axel and Chemnitz, Moritz},
-	urldate = {2023-05-10},
-	date = {2021-09-27},
-	langid = {english},
-	file = {Tschoke et al. - 2021 - Time-Sensitive Networking over Metropolitan Area N.pdf:/home/nzu/Zotero/storage/ABWB8YAS/Tschoke et al. - 2021 - Time-Sensitive Networking over Metropolitan Area N.pdf:application/pdf},
+@article{tarique2009survey,
+  title={Survey of multipath routing protocols for mobile ad hoc networks},
+  author={Tarique, Mohammed and Tepe, Kemal E and Adibi, Sasan and Erfani, Shervin},
+  journal={Journal of network and computer applications},
+  volume={32},
+  number={6},
+  pages={1125--1143},
+  year={2009},
+  publisher={Elsevier}
 }
 
-@article{ganichev_yamr_2010,
-	title = {{YAMR}: yet another multipath routing protocol},
-	volume = {40},
-	issn = {0146-4833},
-	url = {https://dl.acm.org/doi/10.1145/1880153.1880156},
-	doi = {10.1145/1880153.1880156},
-	shorttitle = {{YAMR}},
-	abstract = {Multipath routing is a promising technique to increase the Internet’s reliability and to give users greater control over the service they receive. However, past proposals choose paths which are not guaranteed to have high diversity. In this paper, we propose yet another multipath routing scheme ({YAMR}) for the interdomain case. {YAMR} provably constructs a set of paths that is resilient to any one inter-domain link failure, thus achieving high reliability in a systematic way. Further, even though {YAMR} maintains more paths than {BGP}, it actually requires signiﬁcantly less control trafﬁc, thus alleviating instead of worsening one of the Internet’s scalability problems. This reduction in churn is achieved by a novel hiding technique that automatically localizes failures leaving the greater part of the Internet completely oblivious.},
-	pages = {13--19},
-	number = {5},
-	journaltitle = {{ACM} {SIGCOMM} Computer Communication Review},
-	shortjournal = {{SIGCOMM} Comput. Commun. Rev.},
-	author = {Ganichev, Igor and Dai, Bin and Godfrey, P. Brighten and Shenker, Scott},
-	urldate = {2023-05-10},
-	date = {2010-10-22},
-	langid = {english},
-	file = {Ganichev et al. - 2010 - YAMR yet another multipath routing protocol.pdf:/home/nzu/Zotero/storage/MA76UM2T/Ganichev et al. - 2010 - YAMR yet another multipath routing protocol.pdf:application/pdf},
+@inproceedings{tschoke2021time,
+  title={Time-sensitive networking over metropolitan area networks for remote industrial control},
+  author={Tsch{\"o}ke, Simon and Lynker, Frederic and Buhr, Hauke and Schreiner, Florian and Willner, Alexander and Vick, Axel and Chemnitz, Moritz},
+  booktitle={2021 IEEE/ACM 25th International Symposium on Distributed Simulation and Real Time Applications (DS-RT)},
+  pages={1--4},
+  year={2021},
+  organization={IEEE}
 }
 
-@article{habib_improving_2007,
-	title = {Improving application {QoS} with residential multihoming},
-	volume = {51},
-	issn = {13891286},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S1389128607000461},
-	doi = {10.1016/j.comnet.2007.01.024},
-	abstract = {An appealing solution for a networked end host to circumvent last mile congestion is to connect to multiple service providers simultaneously, which is known as multihoming. The diﬀerences in peering relationships among diﬀerent service providers make it possible for multihomed hosts to use signiﬁcantly diﬀerent routes to the same destination. Therefore, multihoming can dynamically avoid points of congestion in the network by taking advantage of the choice among diﬀerent routes available at any given time.},
-	pages = {3323--3337},
-	number = {12},
-	journaltitle = {Computer Networks},
-	shortjournal = {Computer Networks},
-	author = {Habib, Ahsan and Chuang, John},
-	urldate = {2023-05-10},
-	date = {2007-08},
-	langid = {english},
-	file = {Habib and Chuang - 2007 - Improving application QoS with residential multiho.pdf:/home/nzu/Zotero/storage/DUAZLFL6/Habib and Chuang - 2007 - Improving application QoS with residential multiho.pdf:application/pdf},
+@article{ganichev2010yamr,
+  title={YAMR: Yet another multipath routing protocol},
+  author={Ganichev, Igor and Dai, Bin and Godfrey, P Brighten and Shenker, Scott},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={40},
+  number={5},
+  pages={13--19},
+  year={2010},
+  publisher={ACM New York, NY, USA}
 }
 
-@inproceedings{shu_tao_improving_2005,
-	location = {Miami, {FL}, {USA}},
-	title = {Improving {VoIP} quality through path switching},
-	volume = {4},
-	isbn = {978-0-7803-8968-7},
-	url = {http://ieeexplore.ieee.org/document/1498514/},
-	doi = {10.1109/INFCOM.2005.1498514},
-	abstract = {The current hest-effort Internet cannot readily provide the service guarantees that V O W applications often require. Path snitching can potentially address this problem without requiring new network mechanisms, simply hy leveraging the robustness to performance variations available from connectivity options such as multi-homing and overlays. In this paper, we evaluate the effectiveness and benefits of path switching in improving the quality of {VOW} applications, and demonstrate its feasihility through the design and implementation of a prototype gateway. We argue for an application-driven path switching system that accounts for both network path characteristics and application-specific factors (e.g., codec algorithms, playout buffering schemw)+We also develop an application path quality estimator based on the {ITU}-T E-model for voice quality assessment, and an applicationdriven path switching algorithm that dynamically adapts the time scales over which path switching decisions are made to maximize voice quality. Through network emulation and experiments over a wide-area multi-homed testbed, we show that, with sufficient path diversity, path switching can yield meaningful improvemenb in voice quality. Hence by exploiting the inherent path diversity of the Internet, application-driven path switching is a viable option in providing quality-of-service to applications.},
-	eventtitle = {Proceedings {IEEE} 24th Annual Joint Conference of the {IEEE} Computer and Communications Societies.},
-	pages = {2268--2278},
-	booktitle = {Proceedings {IEEE} 24th Annual Joint Conference of the {IEEE} Computer and Communications Societies.},
-	publisher = {{IEEE}},
-	author = {{Shu Tao} and {Kuai Xu} and Estepa, A. and {Teng Fei} and {Lixin Gao} and Guerin, R. and Kurose, J. and Towsley, D. and {Zhi-Li Zhang}},
-	urldate = {2023-05-11},
-	date = {2005},
-	langid = {english},
-	file = {Shu Tao et al. - 2005 - Improving VoIP quality through path switching.pdf:/home/nzu/Zotero/storage/2SQRMHXX/Shu Tao et al. - 2005 - Improving VoIP quality through path switching.pdf:application/pdf},
+@article{habib2007improving,
+  title={Improving application QoS with residential multihoming},
+  author={Habib, Ahsan and Chuang, John},
+  journal={Computer Networks},
+  volume={51},
+  number={12},
+  pages={3323--3337},
+  year={2007},
+  publisher={Elsevier}
 }
 
-@inproceedings{fanglu_guo_experiences_2004,
-	location = {Hong Kong, China},
-	title = {Experiences in building a multihoming load balancing system},
-	volume = {2},
-	isbn = {978-0-7803-8355-5},
-	url = {http://ieeexplore.ieee.org/document/1357010/},
-	doi = {10.1109/INFCOM.2004.1357010},
-	abstract = {The growing popularity of consumer hroadhand connection technology. in particular e a h l e n and {ADSL}, has started a quiet revolution that will reshape the Internet connectivity solutions for commercial enterprises. One emerging theme is the replacement of dedicated lines hased on frame relay or {ISDN} technologies with multiple inexpensive {ADSWrdhleTV} links each of which potentially is suhxrihed from a different {ISP}. The key enahling technology for this revolution is multihoming load balancing, which spreads an enterprise's Internet traffic among niultiple access links tn increase the aggregate throughput, and diverts traffic away from non-functional links when they fail. Although there exist several commercial multihoming load halancing products in the marketplace. r e v little is pnhlished ahout the design traded\% and their performance iniplications. In this paper. we descrihe the design space of multihoming load halancing systenis, discuss the tradeoffs involved in load halancing and fail-over implementotion strategies, and present quantitative performance nirasuremeni. collected on a eomniercia1 ninltihoming load halancing system.},
-	eventtitle = {{IEEE} {INFOCOM} 2004},
-	pages = {1241--1251},
-	booktitle = {{IEEE} {INFOCOM} 2004},
-	publisher = {{IEEE}},
-	author = {{Fanglu Guo} and {Jiawu Chen} and {Wei Li} and {Tzi-cker Chiueh}},
-	urldate = {2023-05-13},
-	date = {2004},
-	langid = {english},
-	file = {Fanglu Guo et al. - 2004 - Experiences in building a multihoming load balanci.pdf:/home/nzu/Zotero/storage/UDN6YV2U/Fanglu Guo et al. - 2004 - Experiences in building a multihoming load balanci.pdf:application/pdf},
+@inproceedings{guo2004experiences,
+  title={Experiences in building a multihoming load balancing system},
+  author={Guo, Fanglu and Chen, Jiawu and Li, Wei and Chiueh, Tzi-cker},
+  booktitle={IEEE INFOCOM 2004},
+  volume={2},
+  pages={1241--1251},
+  year={2004},
+  organization={IEEE}
 }
 
-@article{akella_measurement-based_nodate,
-	title = {A Measurement-Based Analysis of Multihoming},
-	abstract = {Multihoming has traditionally been employed by stub networks to enhance the reliability of their network connectivity. With the advent of commercial “intelligent route control” products, stubs now leverage multihoming to improve performance. Although multihoming is widely used for reliability and, increasingly for performance, not much is known about the tangible beneﬁts that multihoming can offer, or how these beneﬁts can be fully exploited. In this paper, we aim to quantify the extent to which multihomed networks can leverage performance and reliability beneﬁts from connections to multiple providers. We use data collected from servers belonging to the Akamai content distribution network to evaluate performance beneﬁts from two distinct perspectives of multihoming: high-volume content-providers which transmit large volumes of data to many distributed clients, and enterprises which primarily receive data from the network. In both cases, we ﬁnd that multihoming can improve performance signiﬁcantly and that not choosing the right set of providers could result in a performance penalty as high as 40\%. We also ﬁnd evidence of diminishing returns in performance when more than four providers are considered for multihoming. In addition, using a large collection of measurements, we provide an analysis of the reliability beneﬁts of multihoming. Finally, we provide guidelines on how multihomed networks can choose {ISPs}, and discuss practical strategies of using multiple upstream connections to achieve optimal performance beneﬁts.},
-	author = {Akella, Aditya and Maggs, Bruce and Seshan, Srinivasan and Shaikh, Anees and Sitaraman, Ramesh},
-	langid = {english},
-	file = {Akella et al. - A Measurement-Based Analysis of Multihoming.pdf:/home/nzu/Zotero/storage/ULRJUL4B/Akella et al. - A Measurement-Based Analysis of Multihoming.pdf:application/pdf},
+@inproceedings{akella2003measurement,
+  title={A measurement-based analysis of multihoming},
+  author={Akella, Aditya and Maggs, Bruce and Seshan, Srinivasan and Shaikh, Anees and Sitaraman, Ramesh},
+  booktitle={Proceedings of the 2003 conference on Applications, technologies, architectures, and protocols for computer communications},
+  pages={353--364},
+  year={2003}
 }
 
-@online{noauthor_zotero_nodate,
-	title = {Zotero {\textbar} Downloads},
-	url = {https://www.zotero.org/download/},
-	urldate = {2023-05-16},
+@inproceedings{ergencc2021reliability,
+  title={On the reliability of ieee 802.1 cb frer},
+  author={Ergen{\c{c}}, Do{\u{g}}analp and Fischer, Mathias},
+  booktitle={IEEE INFOCOM 2021-IEEE Conference on Computer Communications},
+  pages={1--10},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{tao2004application,
+  title={Application-specific path switching: A case study for streaming video},
+  author={Tao, Shu and Gu{\'e}rin, Roch},
+  booktitle={Proceedings of the 12th annual ACM international conference on Multimedia},
+  pages={136--143},
+  year={2004}
+}
+
+@inproceedings{alwan2010multi,
+  title={Multi-objective reliable multipath routing for wireless sensor networks},
+  author={Alwan, Hind and Agarwal, Anjali},
+  booktitle={2010 IEEE Globecom Workshops},
+  pages={1227--1231},
+  year={2010},
+  organization={IEEE}
+}
+
+@article{prados2021asynchronous,
+  title={Asynchronous time-sensitive networking for 5G backhauling},
+  author={Prados-Garzon, Jonathan and Taleb, Tarik},
+  journal={IEEE Network},
+  volume={35},
+  number={2},
+  pages={144--151},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{zhang2016fundamentals,
+  title={Fundamentals of heterogeneous backhaul design—Analysis and optimization},
+  author={Zhang, Gongzheng and Quek, Tony QS and Kountouris, Marios and Huang, Aiping and Shan, Hangguan},
+  journal={IEEE Transactions on Communications},
+  volume={64},
+  number={2},
+  pages={876--889},
+  year={2016},
+  publisher={IEEE}
+}
+
+@inproceedings{chen2020collaborative,
+  title={A Collaborative Traffic Scheduling Mechanism for Multi-homed Networks},
+  author={Chen, Fuqiao and Yin, Chenyang},
+  booktitle={2020 IEEE 5th Information Technology and Mechatronics Engineering Conference (ITOEC)},
+  pages={177--181},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{akella2008performance,
+  title={On the performance benefits of multihoming route control},
+  author={Akella, Aditya and Maggs, Bruce and Seshan, Srinivasan and Shaikh, Anees},
+  journal={IEEE/ACM Transactions on Networking},
+  volume={16},
+  number={1},
+  pages={91--104},
+  year={2008},
+  publisher={IEEE}
+}
+
+@inproceedings{andreoli2017mobile,
+  title={Mobile-aware scheduling for low latency backhaul over DOCSIS},
+  author={Andreoli-Fang, Jennifer and Chapman, John T},
+  booktitle={2017 IEEE 28th Annual International Symposium on Personal, Indoor, and Mobile Radio Communications (PIMRC)},
+  pages={1--6},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{huang2008multiconstrained,
+  title={Multiconstrained QoS multipath routing in wireless sensor networks},
+  author={Huang, Xiaoxia and Fang, Yuguang},
+  journal={Wireless Networks},
+  volume={14},
+  number={4},
+  pages={465--478},
+  year={2008},
+  publisher={Springer}
 }
